@@ -1,39 +1,36 @@
 [*]
 [*] GTKWave Analyzer v3.3.104 (w)1999-2020 BSI
-[*] Sun Feb 19 18:38:20 2023
+[*] Mon Feb 20 18:53:08 2023
 [*]
 [dumpfile] "/home/mark/misc/FPGA/quartus/txrxjtag/fpga/txrxmem/zsystem.vcd"
-[dumpfile_mtime] "Sun Feb 19 18:37:42 2023"
-[dumpfile_size] 19403
+[dumpfile_mtime] "Mon Feb 20 18:52:49 2023"
+[dumpfile_size] 59592
 [savefile] "/home/mark/misc/FPGA/quartus/txrxjtag/fpga/txrxmem/zsystem.gtkw"
-[timestart] 1654
-[size] 1234 654
-[pos] -1 -1
-*-5.000000 1044 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+[timestart] 3149
+[size] 1234 762
+[pos] 0 0
+*-5.000000 2846 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
 [treeopen] tb.
 [treeopen] tb.u.
 [treeopen] tb.u.u_jtag_top.
 [sst_width] 212
 [signals_width] 205
 [sst_expanded] 1
-[sst_vpaned_height] 165
+[sst_vpaned_height] 201
 @28
 tb.u.u_jtag_top.tck
 @22
+tb.u.timer[31:0]
 tb.u.u_jtag_top.ir[3:0]
 tb.u.u_jtag_top.u_jtag_vdr.vdr[31:0]
 @28
+tb.u.u_jtag_top.capture_dr
 tb.u.u_jtag_top.shift_dr
 tb.u.u_jtag_top.update_dr
-tb.u.u_jtag_top.capture_dr
-tb.u.u_jtag_top.tdi
 tb.u.u_jtag_top.tdo2tap
-tb.u.u_jtag_top.vdr_tdo
 tb.u.u_jtag_top.raddr_enable
 tb.u.u_jtag_top.waddr_enable
-@29
 tb.u.u_jtag_top.rdata_enable
-@28
 tb.u.u_jtag_top.wdata_enable
 @22
 tb.u.u_jtag_top.raddr_out[31:0]
@@ -41,15 +38,24 @@ tb.u.u_jtag_top.waddr_out[31:0]
 tb.u.u_jtag_top.wdata_out[31:0]
 tb.u.u_jtag_top.rdata_in[31:0]
 @28
-tb.u.u_jtag_top.u_jtag_vdr.write_increment
-tb.u.u_jtag_top.u_jtag_vdr.read_increment
 tb.u.wram_enable
 tb.u.ram_write_strobe
 @22
 tb.u.nano_led_[7:0]
-@28
-tb.u.u_jtag_top.u_jtag_vdr.latch_wdata
-@22
 tb.u.u_jtag_top.u_jtag_vdr.wr_count[4:0]
+@28
+tb.u.u_jtag_top.flags_enable
+@22
+tb.u.u_jtag_top.flags_out[31:0]
+@28
+tb.u.flags_tmode
+@22
+tb.u.tapsigs[7:0]
+tb.u.tapsigs_d[7:0]
+tb.u.prev_tapsigs[7:0]
+tb.u.ram_wr_addr[13:0]
+tb.u.ram_wr_data[31:0]
+@28
+tb.u.addr_increment
 [pattern_trace] 1
 [pattern_trace] 0
